--- a/css/app.css
+++ b/css/app.css
@@ -104,9 +104,203 @@
 }
 
 .divisor-sobre-mim {
-    background-color: red;
+    background-color: #4ccae4;
     height: 2px;
     margin-left: 210px;
     margin-top: -2px;
-    width: 85%;
+    width: 1126px;
+}
+
+@media (max-width: 320px) {
+    
+}
+
+@media (min-width: 321px) and (max-width: 375px) {
+    
+}
+
+@media (min-width:  376px) and (max-width: 576px) {
+
+}
+
+@media (min-width: 577px) and (max-width: 768px) {
+    .height-80 {
+        height: 80px;
+    }
+
+    .margin-top-25 {
+        margin-top: 16px;
+    }
+
+    .background-color-menu-lateral {
+        background-color: #48cae4;
+        height: 120px;
+    }
+
+    .temanho-da-imagem-principal {
+        display: none;
+    }
+
+    .alinhamento-do-link-principal {
+        display: none;
+    }
+
+    .container {
+        display: inline-block;
+        cursor: pointer;
+      }
+      
+    .bar1, .bar2, .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: #333;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+    
+    .change .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+        transform: rotate(-45deg) translate(-9px, 6px) ;
+    }
+    
+    .change .bar2 {
+        opacity: 0;
+    }
+    
+    .change .bar3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+        transform: rotate(45deg) translate(-8px, -8px) ;
+    }
+
+    .width-144 {
+        width: 144px;
+        background-color: #48cae4;
+        height: 120px;
+    }
+
+    .padding-top-35 {
+        padding-top: 35px;
+    }
+
+    .conteudo-responsivo {
+        padding-left: 25px;
+        margin-top: -511px;
+        background-color: #ffe6a7;
+        box-shadow: 0 .1rem 1rem rgba(0,0,0,.15)!important;
+        height: 260px;
+        padding-top: 23px;
+    }
+
+    .div-espacamento-responsivo {
+        line-height: 45px;
+        margin-top: -5px;
+    }
+
+    .espacamento-texto-top {
+        margin-left: 50px;
+        margin-top: 320px;
+    }
+
+    #conteudo_responsivo_dnone {
+        display: none;
+    }
+
+    .espacamento-texto-top {
+        margin-left: 25px;
+        margin-top: 100px;
+    }
+
+    .class-texto-top {
+        font-family: 'Big Shoulders Display', cursive;
+        font-size: 53px;
+        color: black !important;
+        align-items: center;
+        line-height: 1;
+        vertical-align: middle;
+        margin-bottom: 1rem;
+        font-weight: bold;
+    }
+
+    .descricao-sobre-mim {
+        font-size: 20px;
+        color: black;
+        font-family: 'Roboto', sans-serif;
+        line-height: 28px;
+    }
+
+    .segunda-descricao-sobre-mim {
+        font-size: 20px;
+        color: black;
+        font-family: 'Roboto', sans-serif;
+        line-height: 28px;
+    }
+
+    .divisor-sobre-mim {
+        background-color: #4ccae4;
+        height: 2px;
+        margin-left: -15px;
+        margin-top: 200px;
+        width: 768px;
+    }
+
+}
+
+@media (min-width: 769px) and (max-width: 992px) {
+    
+}
+
+@media (min-width: 993px) and (max-width: 1200px) {
+    .temanho-da-imagem-principal {
+        border-radius: 100%;
+        width: 122px;
+        border: 3px solid #00509d;
+    }
+
+    .divisor-sobre-mim {
+        background-color: #4ccae4;
+        height: 2px;
+        margin-left: 156px;
+        margin-top: -2px;
+        width: 853px;
+    }
+
+    .class-texto-top {
+        font-family: 'Big Shoulders Display', cursive;
+        font-size: 58px;
+        color: black !important;
+        align-items: center;
+        line-height: 1;
+        vertical-align: middle;
+        margin-bottom: 1rem;
+        font-weight: bold;
+    }
+
+    .margin-top-1 {
+        margin-top: 1.5rem!important;
+    }
+
+    .alinhamento-do-link-principal {
+        line-height: 45px;
+        margin-top: 40px;
+    }
+
+    .color-link-lateral {
+        text-decoration: none !important;
+        line-height: 1.6;
+        font-size: 1.13rem;
+        font-weight: 600;
+        font-family: "Roboto",sans-serif;
+        color: #00509d;
+        transition: all 0.7s;
+    }
+
+    .espacamenteo-imagem {
+        margin-top: 125px;
+        margin-left: 3px;
+    }
+
+}
+
+@media (min-width: 1201px) {
+    
 }
