--- a/css/app.css
+++ b/css/app.css
@@ -106,9 +106,50 @@
 .divisor-sobre-mim {
     background-color: #4ccae4;
     height: 2px;
-    margin-left: 210px;
-    margin-top: -2px;
-    width: 1126px;
+    margin-left: -15px;
+    margin-top: 88px;
+    width: 1111px;
+}
+
+.div-espacamento-escolaridade {
+    margin-left: 50px;
+}
+
+.h1-escolaridade {
+    font-weight: bold;
+    font-size: 40px;
+    font-family: 'Big Shoulders Display', cursive;
+    margin-bottom: 50px;
+    color: black !important;
+    padding-top: 50px;
+    margin-left: 50px;
+}
+
+.curso-mscode {
+    text-transform: uppercase;
+    color: #2a81ea;
+    font-size: 1.125rem;
+    letter-spacing: .1em;
+    font-family: "Roboto",sans-serif;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.tag-p-escolaridade {
+    width: 83%;
+}
+
+.height-100 {
+    height: 100%;
+}
+
+.overflow-y {
+    overflow-y: scroll;
+    height: 633px;
+}
+
+.margin-top-20 {
+    margin-top: 25px;
 }
 
 @media (max-width: 320px) {
